# api-dzengi-rs

./: Cargo.toml  README.md
macr/: Cargo.toml
macr/src/: lib.rs
src/: correction_local_time.rs  crypto.rs  enums.rs  errors.rs  help.rs  lib.rs  models.rs  response_models.rs  rest_api.rs  websocket_api.rs
src/crypto/: user_settings.rs
src/enums/: asset_type.rs  candle_type.rs  correction_local_time.rs  currency_type.rs  execution_source.rs  execution_status.rs  execution_type.rs  interval.rs  market_modes.rs  market_type.rs  order_status.rs  order_type.rs  position_state.rs  position_type.rs  reject_reason.rs  request_state.rs  request_type.rs  side.rs  symbol_status.rs  time_in_force.rs
src/errors/: correction_time.rs  crypto_error.rs  rest_client_error.rs
src/help/: default_key.rs  macros.rs  request.rs  timestamp.rs
src/models/: account_balance.rs  account_request.rs  account_response.rs  agg_trades.rs  agg_trades_request.rs  agg_trades_response.rs  all_my_trades_request.rs  all_my_trades_response.rs  blockchain_address_get_response.rs  blockchain_address_request.rs  by_symbol_request.rs  cancel_order_request.rs  cancel_order_response.rs  close_trading_position_request.rs  create_order_request.rs  currency_dto_response.rs  depth_request.rs  depth_response.rs  edit_exchange_order_request.rs  empty_request.rs  exchange_filter.rs  exchange_info.rs  exchange_symbol_info.rs  fetch_order_response.rs  get_order_dto_response_res.rs  k_lines_request.rs  k_lines_response.rs  leverage_settings_request.rs  market_depth_data.rs  market_depth_event.rs  my_trades_response.rs  new_order_response_result.rs  ohlc_bar.rs  ohlc_subscribe_request.rs  open_orders_response.rs  optional_auth_request.rs  ping_request.rs  position_dto.rs  position_history_request.rs  query_order_response.rs  (+20 more)
src/models/request/: account_info_request.rs  agg_trades_request.rs  cancel_order_request.rs  change_order_request.rs  close_trading_position_request.rs  create_order_request.rs  deposit_address_request.rs  deposits_request.rs  depth_request.rs  fetch_order_request.rs  klines_request.rs  ledger_request.rs  leverage_settings_request.rs  my_trades_request.rs  open_orders_request.rs  order_request.rs  range_request.rs  recv_window_request.rs  symbol_request.rs  symbol_with_recv_request.rs  trading_positions_history_request.rs  transactions_request.rs  update_trading_order_request.rs  update_trading_position_request.rs  withdrawals_request.rs
src/models/response/: blockchain_address_get_response.rs  currency_response.rs  edit_exchange_order_response.rs  exchange_info_response.rs  funding_limits_dto_response.rs  (+25 more)
src/response_models/: recv_window_request.rs
src/rest_api/: delete_order.rs  exchange_info.rs  get_account_info.rs  get_currencies.rs  get_deposit_address.rs  get_deposits.rs  get_depth.rs  get_exchange_info.rs  get_fetch_order.rs  get_funding_limits.rs  get_klines.rs  get_ledger.rs  get_leverage_settings.rs  get_my_trades.rs  get_open_orders.rs  get_server_time.rs  get_ticker_24hr.rs  get_trades_aggregated.rs  get_trading_fees.rs  get_trading_limits.rs  get_trading_positions_history.rs  get_transactions.rs  get_withdrawals.rs  post_close_trading_position.rs  post_order.rs  post_update_trading_order.rs  post_update_trading_position.rs  put_order.rs  trading_positions.rs  v1.rs  v2.rs
src/websocket_api/: v1.rs  v2.rs
(+57 files in other folders)
