[package]
name = "api-dzengi-rs"
version = "0.1.0"
edition = "2024"

[features]

[dev-dependencies]
env-file-reader = { version = "^0.3" }
tokio = { version = "^1", features = ["macros", "test-util"] }

[dependencies]
thiserror = { version = "^2.0" }
hex = { version = "^0.4" }
reqwest = { version = "^0.12", features = ["json"] }
tokio = { version = "^1", features = ["sync"] }
hmac = { version = "^0.12" }
sha2 = { version = "^0.10" }
secstr = { version = "^0.5" }
secrecy = { version = "^0.10" }
zeroize = { version = "^1.8.0" }
uuid = { version = "^1", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
validator = { version = "^0.20", features = ["derive"] }
strum_macros = "^0.27"
strum = { version = "^0.27", features = ["derive"] }
